# graph-maker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
graph-tool/: CMakeLists.txt  main.cpp
graph-tool/core/: application.cpp  application.h  layer.h
graph-tool/graph/: graphLayer.cpp  graphLayer.h
graph-tool/inputHandle/: inputLayer.cpp  inputLayer.h
scripts/: VS2022-GenProjects.bat
